--- a/Languages/default-ja.xml
+++ b/Languages/default-ja.xml
@@ -1649,6 +1649,10 @@
 		<menu name="WebServices.List.Menu">
 			<item id="ID_WEBSERVICES_MUSICBRAINZ" text="_MusicBrainz"/>
 		</menu>
+		<menu name="Path.Menu">
+			<item id="ID_PATH_EXPLORE" text="エクスプローラ(_E)"/>
+			<item id="ID_PATH_COPY" text="_Copy"/>
+		</menu>
 	</menus>
 	<!-- Documents -->
 	<documents>
@@ -2559,6 +2563,8 @@
 		<tip id="ID_NEXT_PANE" message="Switch to the next window pane" tip="Next Pane"/>
 		<tip id="ID_OPEN_DOWNLOADS_FOLDER" message="Open my folder of completed Downloads"/>
 		<tip id="ID_PREV_PANE" message="Switch back to the previous window pane" tip="Previous Pane"/>
+		<tip id="ID_PATH_COPY" message="Copy this path to clipboard."/>
+		<tip id="ID_PATH_EXPLORE" message="Explore this path."/>
 		<tip id="ID_SCHEDULER_ACTIVATE" message="Activates selected task(s) from the list."/>
 		<tip id="ID_SCHEDULER_ADD" message="Adds a new task to scheduler list."/>
 		<tip id="ID_SCHEDULER_DEACTIVATE" message="Deactivates selected tasks."/>
@@ -2861,6 +2867,7 @@
 		<string id="8336" value="このファイル用のソースは不安定である可能性があります"/>
 		<string id="8337" value="未検証"/>
 		<string id="8338" value="Free:"/>
+		<string id="12999" value="Client %s has a prohibited user agent &quot;%s&quot;, banning."/>
 		<string id="13000" value="Are you sure you want to delete the selected security rules? This cannot be undone."/>
 		<string id="13001" value="Files shared over the Internet"/>
 		<string id="16063" value="UPnP port mapping failed after 10 attempts."/>
@@ -3433,6 +3440,10 @@
 		<string id="20265" value="Done"/>
 		<string id="20266" value="Waiting..."/>
 		<string id="20267" value="No Tasks Currently Scheduled"/>
+		<string id="20268" value="完了ファイルの保存先"/>
+		<string id="20269" value="未完了ファイルの保存先"/>
+		<string id="20270" value="Torrentの保存先"/>
+		<string id="20271" value="コレクションの格納先"/>
 	</strings>
 	<!-- Localised Dialog Text, the "cookie" verifies that the dialog matches the skin -->
 	<!-- Don't edit dialogs manualy! Use DialogScan feature instead -->
@@ -3473,7 +3484,7 @@
 			<control caption="最小化をクリックした時:"/>
 			<control caption="通常|タスクトレイに最小化"/>
 		</dialog>
-		<dialog name="CLibrarySettingsPage" cookie="BuBuBuBuBuBuStEdmsStStEdmsStBuBuCoBuBuBuCoBuBuBuEdBuBuBu" caption="ライブラリ">
+		<dialog name="CLibrarySettingsPage" cookie="BuBuBuBuBuBuStEdmsStStEdmsStBuBuCoBuBuBuCoBuBuBuCoBuBuBu" caption="ライブラリ">
 			<control caption="オプション(_O):"/>
 			<control caption="フォルダ表示を記録する"/>
 			<control caption="ライブラリフォルダを監視する"/>
@@ -3497,7 +3508,7 @@
 			<control/>
 			<control caption="追加(_A)"/>
 			<control caption="削除(_R)"/>
-			<control caption="コレクションの格納先(_C):"/>
+			<control caption="コレクションの格納先"/>
 			<control/>
 			<control/>
 			<control caption="ファイル削除時にゴーストを作成する"/>
@@ -3610,8 +3621,8 @@
 			<control/>
 			<control/>
 		</dialog>
-		<dialog name="CDownloadsSettingsPage" cookie="BuEdBuBuStCoBuStEdmsStEdmsStEdmsBuStCoStCoBuBuEdBu" caption="転送">
-			<control caption="Save Completed Files Here"/>
+		<dialog name="CDownloadsSettingsPage" cookie="BuCoBuBuStCoBuStEdmsStEdmsStEdmsBuStCoStCoBuBuCoBu" caption="転送">
+			<control caption="完了ファイルの保存先"/>
 			<control/>
 			<control/>
 			<control caption="Scan every completed file with AntiVirus"/>
@@ -3633,7 +3644,7 @@
 			<control caption="最大キュー数:"/>
 			<control/>
 			<control caption="接続済みのネットワークでしかアップロード・ダウンロードしない"/>
-			<control caption="Store Temporary Incomplete Files Here"/>
+			<control caption="未完了ファイルの保存先"/>
 			<control/>
 			<control/>
 		</dialog>
@@ -3744,7 +3755,7 @@
 			<control caption="eDonkey2000ツール(_T):"/>
 			<control caption="ウェブからeDonkey2000サーバーリストをダウンロード:"/>
 		</dialog>
-		<dialog name="CBitTorrentSettingsPage" cookie="BuBuBuEdmsEdmsBuEdmsBuBuEdBuEdBuEdBuBuBuStStStStBu" caption="BitTorrent">
+		<dialog name="CBitTorrentSettingsPage" cookie="BuBuBuEdmsEdmsBuEdmsBuBuCoBuEdBuEdBuBuBuStStStStBu" caption="BitTorrent">
 			<control caption="Always connect to BitTorrent"/>
 			<control caption="Connect to BitTorrent today"/>
 			<control caption="Enable BitTorrent DHT"/>
@@ -3764,7 +3775,7 @@
 			<control/>
 			<control caption="_BitTorrent Network:"/>
 			<control caption="ダウンロード接続数(_D):"/>
-			<control caption="Torrentの保存先(_S):"/>
+			<control caption="Torrentの保存先"/>
 			<control caption="同時Torrent数"/>
 			<control caption="クライアント接続数"/>
 			<control caption="%"/>
