--- a/Languages/default-af.xml
+++ b/Languages/default-af.xml
@@ -1649,6 +1649,10 @@
 		<menu name="WebServices.List.Menu">
 			<item id="ID_WEBSERVICES_MUSICBRAINZ" text="_MusicBrainz"/>
 		</menu>
+		<menu name="Path.Menu">
+			<item id="ID_PATH_EXPLORE" text="_Verken"/>
+			<item id="ID_PATH_COPY" text="_Copy"/>
+		</menu>
 	</menus>
 	<!-- Documents -->
 	<documents>
@@ -2558,6 +2562,8 @@
 		<tip id="ID_NEXT_PANE" message="Switch to the next window pane" tip="Next Pane"/>
 		<tip id="ID_OPEN_DOWNLOADS_FOLDER" message="Open my folder of completed Downloads"/>
 		<tip id="ID_PREV_PANE" message="Switch back to the previous window pane" tip="Previous Pane"/>
+		<tip id="ID_PATH_COPY" message="Copy this path to clipboard."/>
+		<tip id="ID_PATH_EXPLORE" message="Explore this path."/>
 		<tip id="ID_SCHEDULER_ACTIVATE" message="Activates selected task(s) from the list."/>
 		<tip id="ID_SCHEDULER_ADD" message="Adds a new task to scheduler list."/>
 		<tip id="ID_SCHEDULER_DEACTIVATE" message="Deactivates selected tasks."/>
@@ -2860,6 +2866,7 @@
 		<string id="8336" value="Bronne vir hierdie lêer mag onstabiel wees"/>
 		<string id="8337" value="Untrusted"/>
 		<string id="8338" value="Free:"/>
+		<string id="12999" value="Client %s has a prohibited user agent &quot;%s&quot;, banning."/>
 		<string id="13000" value="Are you sure you want to delete the selected security rules? This cannot be undone."/>
 		<string id="13001" value="Files shared over the Internet"/>
 		<string id="16063" value="UPnP port mapping failed after 10 attempts."/>
@@ -3432,6 +3439,10 @@
 		<string id="20265" value="Done"/>
 		<string id="20266" value="Waiting..."/>
 		<string id="20267" value="No Tasks Currently Scheduled"/>
+		<string id="20268" value="Stoor Volledige Aflaaie Hier"/>
+		<string id="20269" value="Stoor Onvolledige Aflaaie Hier"/>
+		<string id="20270" value="Stoor Torrents Hier"/>
+		<string id="20271" value="Stoor Versamelings Hier"/>
 	</strings>
 	<!-- Localised Dialog Text, the "cookie" verifies that the dialog matches the skin -->
 	<!-- Don't edit dialogs manualy! Use DialogScan feature instead -->
@@ -3472,7 +3483,7 @@
 			<control caption="As ek minimeer kliek:"/>
 			<control caption="Normaal|Minimeer na Taakbalk"/>
 		</dialog>
-		<dialog name="CLibrarySettingsPage" cookie="BuBuBuBuBuBuStEdmsStStEdmsStBuBuCoBuBuBuCoBuBuBuEdBuBuBu" caption="Biblioteek">
+		<dialog name="CLibrarySettingsPage" cookie="BuBuBuBuBuBuStEdmsStStEdmsStBuBuCoBuBuBuCoBuBuBuCoBuBuBu" caption="Biblioteek">
 			<control caption="_Verstellings:"/>
 			<control caption="Onthou gidsaansigte"/>
 			<control caption="Hou biblioteekgidse dop"/>
@@ -3496,7 +3507,7 @@
 			<control/>
 			<control caption="_Voeg by"/>
 			<control caption="_Verwyder"/>
-			<control caption="Stoor Ve_rsamelings Hier:"/>
+			<control caption="Stoor Versamelings Hier"/>
 			<control/>
 			<control/>
 			<control caption="Create ghost files when deleting"/>
@@ -3609,8 +3620,8 @@
 			<control/>
 			<control/>
 		</dialog>
-		<dialog name="CDownloadsSettingsPage" cookie="BuEdBuBuStCoBuStEdmsStEdmsStEdmsBuStCoStCoBuBuEdBu" caption="Aflaaie">
-			<control caption="Save Completed Files Here"/>
+		<dialog name="CDownloadsSettingsPage" cookie="BuCoBuBuStCoBuStEdmsStEdmsStEdmsBuStCoStCoBuBuCoBu" caption="Aflaaie">
+			<control caption="Stoor Volledige Aflaaie Hier"/>
 			<control/>
 			<control/>
 			<control caption="Scan every completed file with AntiVirus"/>
@@ -3632,7 +3643,7 @@
 			<control caption="Maksimum Waglysposisie:"/>
 			<control/>
 			<control caption="Laai net af of op na netwerke waaraan jy gekonnekteer is."/>
-			<control caption="Store Temporary Incomplete Files Here"/>
+			<control caption="Stoor Onvolledige Aflaaie Hier"/>
 			<control/>
 			<control/>
 		</dialog>
@@ -3743,7 +3754,7 @@
 			<control caption="eDonkey2000 _Opsies:"/>
 			<control caption="Laai eDonkey2000 bedienerlys van die web af:"/>
 		</dialog>
-		<dialog name="CBitTorrentSettingsPage" cookie="BuBuBuEdmsEdmsBuEdmsBuBuEdBuEdBuEdBuBuBuStStStStBu" caption="BitTorrent">
+		<dialog name="CBitTorrentSettingsPage" cookie="BuBuBuEdmsEdmsBuEdmsBuBuCoBuEdBuEdBuBuBuStStStStBu" caption="BitTorrent">
 			<control caption="Always connect to BitTorrent"/>
 			<control caption="Connect to BitTorrent today"/>
 			<control caption="Enable BitTorrent DHT"/>
@@ -3763,7 +3774,7 @@
 			<control/>
 			<control caption="_BitTorrent Network:"/>
 			<control caption="_Aflaai Koppellings:"/>
-			<control caption="_Stoor Torrents Hier:"/>
+			<control caption="Stoor Torrents Hier"/>
 			<control caption="Torrents maksimum op 'n slag"/>
 			<control caption="Kliënt koppellings"/>
 			<control caption="%"/>
