--- a/Languages/default-ar.xml
+++ b/Languages/default-ar.xml
@@ -1649,6 +1649,10 @@
 		<menu name="WebServices.List.Menu">
 			<item id="ID_WEBSERVICES_MUSICBRAINZ" text="_MusicBrainz"/>
 		</menu>
+		<menu name="Path.Menu">
+			<item id="ID_PATH_EXPLORE" text="_تصفح"/>
+			<item id="ID_PATH_COPY" text="_نسخ"/>
+		</menu>
 	</menus>
 	<!-- Documents -->
 	<documents>
@@ -2558,6 +2562,8 @@
 		<tip id="ID_NEXT_PANE" message="Switch to the next window pane" tip="Next Pane"/>
 		<tip id="ID_OPEN_DOWNLOADS_FOLDER" message="Open my folder of completed Downloads"/>
 		<tip id="ID_PREV_PANE" message="Switch back to the previous window pane" tip="Previous Pane"/>
+		<tip id="ID_PATH_COPY" message="Copy this path to clipboard."/>
+		<tip id="ID_PATH_EXPLORE" message="Explore this path."/>
 		<tip id="ID_SCHEDULER_ACTIVATE" message="Activates selected task(s) from the list."/>
 		<tip id="ID_SCHEDULER_ADD" message="Adds a new task to scheduler list."/>
 		<tip id="ID_SCHEDULER_DEACTIVATE" message="Deactivates selected tasks."/>
@@ -2860,6 +2866,7 @@
 		<string id="8336" value="المصادر لهذا الملف قد لا تكون مستقرة"/>
 		<string id="8337" value="غير موثوق"/>
 		<string id="8338" value="Free:"/>
+		<string id="12999" value="Client %s has a prohibited user agent &quot;%s&quot;, banning."/>
 		<string id="13000" value="هل تريد فعلا حذف قواعد الأمان المحددة ؟ لا يمكن التراجع عن ذلك"/>
 		<string id="13001" value="ملفات المشاركة على الإنترنت"/>
 		<string id="16063" value="فشل تخطيط منفذ UPnP بعد 10 محاولات"/>
@@ -3432,6 +3439,10 @@
 		<string id="20265" value="Done"/>
 		<string id="20266" value="Waiting..."/>
 		<string id="20267" value="No Tasks Currently Scheduled"/>
+		<string id="20268" value="حفظ الملفات المكتملة هنا"/>
+		<string id="20269" value="تخزين الملفات الغير مكتملة المؤقتة هنا"/>
+		<string id="20270" value="هنا Torrent تخزين ملفات"/>
+		<string id="20271" value="تخزين التجميعات هنا"/>
 	</strings>
 	<!-- Localised Dialog Text, the "cookie" verifies that the dialog matches the skin -->
 	<!-- Don't edit dialogs manualy! Use DialogScan feature instead -->
@@ -3472,7 +3483,7 @@
 			<control caption=":عند النقر على تصغير"/>
 			<control caption="تصغير عادي|تصغير إلى جوار الساعة"/>
 		</dialog>
-		<dialog name="CLibrarySettingsPage" cookie="BuBuBuBuBuBuStEdmsStStEdmsStBuBuCoBuBuBuCoBuBuBuEdBuBuBu" caption="المكتبة">
+		<dialog name="CLibrarySettingsPage" cookie="BuBuBuBuBuBuStEdmsStStEdmsStBuBuCoBuBuBuCoBuBuBuCoBuBuBu" caption="المكتبة">
 			<control caption=":_خيارات"/>
 			<control caption="تذكر طرق عرض المجلدات"/>
 			<control caption="مشاهدة مجلدات المكتبة"/>
@@ -3496,7 +3507,7 @@
 			<control/>
 			<control caption="إ_ضافة"/>
 			<control caption="_إزالة"/>
-			<control caption=":تخزين التجميعات _هنا"/>
+			<control caption="تخزين التجميعات هنا"/>
 			<control/>
 			<control/>
 			<control caption="إنشاء ملفات وهمية عند الحذف"/>
@@ -3609,8 +3620,8 @@
 			<control/>
 			<control/>
 		</dialog>
-		<dialog name="CDownloadsSettingsPage" cookie="BuEdBuBuStCoBuStEdmsStEdmsStEdmsBuStCoStCoBuBuEdBu" caption="التحميلات">
-			<control caption="Save Completed Files Here"/>
+		<dialog name="CDownloadsSettingsPage" cookie="BuCoBuBuStCoBuStEdmsStEdmsStEdmsBuStCoStCoBuBuCoBu" caption="التحميلات">
+			<control caption="حفظ الملفات المكتملة هنا"/>
 			<control/>
 			<control/>
 			<control caption="Scan every completed file with AntiVirus"/>
@@ -3632,7 +3643,7 @@
 			<control caption=":أقصى طول لقائمة الإنتظار"/>
 			<control/>
 			<control caption="التحميل و الإرسال من و إلى الشبكات المتصلة فقط"/>
-			<control caption="Store Temporary Incomplete Files Here"/>
+			<control caption="تخزين الملفات الغير مكتملة المؤقتة هنا"/>
 			<control/>
 			<control/>
 		</dialog>
@@ -3743,7 +3754,7 @@
 			<control caption=":eDonkey _أدوات"/>
 			<control caption=":من الانترنت eDonkey تحميل قائمة ملقم"/>
 		</dialog>
-		<dialog name="CBitTorrentSettingsPage" cookie="BuBuBuEdmsEdmsBuEdmsBuBuEdBuEdBuEdBuBuBuStStStStBu" caption="BitTorrent">
+		<dialog name="CBitTorrentSettingsPage" cookie="BuBuBuEdmsEdmsBuEdmsBuBuCoBuEdBuEdBuBuBuStStStStBu" caption="BitTorrent">
 			<control caption="Always connect to BitTorrent"/>
 			<control caption="Connect to BitTorrent today"/>
 			<control caption="Enable BitTorrent DHT"/>
@@ -3763,7 +3774,7 @@
 			<control/>
 			<control caption="_BitTorrent Network:"/>
 			<control caption=":إ_تصالات التحميل"/>
-			<control caption=": هنا Torrent ت_خزين ملفات"/>
+			<control caption="هنا Torrent تخزين ملفات"/>
 			<control caption="معا Torrents عمليات"/>
 			<control caption="إتصالات العميل"/>
 			<control caption="%"/>
