--- a/Languages/default-ee.xml
+++ b/Languages/default-ee.xml
@@ -1649,6 +1649,10 @@
 		<menu name="WebServices.List.Menu">
 			<item id="ID_WEBSERVICES_MUSICBRAINZ" text="_MusicBrainz"/>
 		</menu>
+		<menu name="Path.Menu">
+			<item id="ID_PATH_EXPLORE" text="_Vaata Faile"/>
+			<item id="ID_PATH_COPY" text="_Kopeeri"/>
+		</menu>
 	</menus>
 	<!-- Documents -->
 	<documents>
@@ -2559,6 +2563,8 @@
 		<tip id="ID_NEXT_PANE" message="Switch to the next window pane" tip="Next Pane"/>
 		<tip id="ID_OPEN_DOWNLOADS_FOLDER" message="Open my folder of completed Downloads"/>
 		<tip id="ID_PREV_PANE" message="Switch back to the previous window pane" tip="Previous Pane"/>
+		<tip id="ID_PATH_COPY" message="Copy this path to clipboard."/>
+		<tip id="ID_PATH_EXPLORE" message="Explore this path."/>
 		<tip id="ID_SCHEDULER_ACTIVATE" message="Activates selected task(s) from the list."/>
 		<tip id="ID_SCHEDULER_ADD" message="Adds a new task to scheduler list."/>
 		<tip id="ID_SCHEDULER_DEACTIVATE" message="Deactivates selected tasks."/>
@@ -2861,6 +2867,7 @@
 		<string id="8336" value="Selle faili allikad on ebastabiilsed"/>
 		<string id="8337" value="Ebausaldatav"/>
 		<string id="8338" value="Free:"/>
+		<string id="12999" value="Client %s has a prohibited user agent &quot;%s&quot;, banning."/>
 		<string id="13000" value="Are you sure you want to delete the selected security rules? This cannot be undone."/>
 		<string id="13001" value="Files shared over the Internet"/>
 		<string id="16063" value="UPnP port mapping failed after 10 attempts."/>
@@ -3433,6 +3440,10 @@
 		<string id="20265" value="Done"/>
 		<string id="20266" value="Waiting..."/>
 		<string id="20267" value="No Tasks Currently Scheduled"/>
+		<string id="20268" value="Salvesta Lõpetatud Failid Siia"/>
+		<string id="20269" value="Salvesta Ajutised Poolikud Failid Siia"/>
+		<string id="20270" value="Salvesta Torrentid Siia"/>
+		<string id="20271" value="Siia Salvesta Kollektsioonid"/>
 	</strings>
 	<!-- Localised Dialog Text, the "cookie" verifies that the dialog matches the skin -->
 	<!-- Don't edit dialogs manualy! Use DialogScan feature instead -->
@@ -3473,7 +3484,7 @@
 			<control caption="Kui klikin minimeeri:"/>
 			<control caption="Tavaline|Vähenda Tööriistaribale"/>
 		</dialog>
-		<dialog name="CLibrarySettingsPage" cookie="BuBuBuBuBuBuStEdmsStStEdmsStBuBuCoBuBuBuCoBuBuBuEdBuBuBu" caption="Raamatukogu">
+		<dialog name="CLibrarySettingsPage" cookie="BuBuBuBuBuBuStEdmsStStEdmsStBuBuCoBuBuBuCoBuBuBuCoBuBuBu" caption="Raamatukogu">
 			<control caption="_Seaded:"/>
 			<control caption="Pea meeles kaustade vaated"/>
 			<control caption="Vaata raamatukogu kaustu"/>
@@ -3497,7 +3508,7 @@
 			<control/>
 			<control caption="_Lisa"/>
 			<control caption="_Eemalda"/>
-			<control caption="Siia _Salvesta Kollektsioonid:"/>
+			<control caption="Siia Salvesta Kollektsioonid"/>
 			<control/>
 			<control/>
 			<control caption="Create ghost files when deleting"/>
@@ -3610,8 +3621,8 @@
 			<control/>
 			<control/>
 		</dialog>
-		<dialog name="CDownloadsSettingsPage" cookie="BuEdBuBuStCoBuStEdmsStEdmsStEdmsBuStCoStCoBuBuEdBu" caption="Ülekanded">
-			<control caption="Save Completed Files Here"/>
+		<dialog name="CDownloadsSettingsPage" cookie="BuCoBuBuStCoBuStEdmsStEdmsStEdmsBuStCoStCoBuBuCoBu" caption="Ülekanded">
+			<control caption="Salvesta Lõpetatud Failid Siia"/>
 			<control/>
 			<control/>
 			<control caption="Scan every completed file with AntiVirus"/>
@@ -3633,7 +3644,7 @@
 			<control caption="Maksimaalne Järjekordade arv:"/>
 			<control/>
 			<control caption="Tõmba ainult ühendatud võrkudest."/>
-			<control caption="Store Temporary Incomplete Files Here"/>
+			<control caption="Salvesta Ajutised Poolikud Failid Siia"/>
 			<control/>
 			<control/>
 		</dialog>
@@ -3744,7 +3755,7 @@
 			<control caption="eDonkey2000 _Tööriistad:"/>
 			<control caption="Tõmba weebist eDonkey2000 serverite nimekiri:"/>
 		</dialog>
-		<dialog name="CBitTorrentSettingsPage" cookie="BuBuBuEdmsEdmsBuEdmsBuBuEdBuEdBuEdBuBuBuStStStStBu" caption="BitTorrent">
+		<dialog name="CBitTorrentSettingsPage" cookie="BuBuBuEdmsEdmsBuEdmsBuBuCoBuEdBuEdBuBuBuStStStStBu" caption="BitTorrent">
 			<control caption="Always connect to BitTorrent"/>
 			<control caption="Connect to BitTorrent today"/>
 			<control caption="Enable BitTorrent DHT"/>
@@ -3764,7 +3775,7 @@
 			<control/>
 			<control caption="_BitTorrent Network:"/>
 			<control caption="_Allalaadimisühendused:"/>
-			<control caption="_Salvesta Torrentid Siia:"/>
+			<control caption="Salvesta Torrentid Siia"/>
 			<control caption="Torrentit korraga"/>
 			<control caption="Kliendi ühendust"/>
 			<control caption="%"/>
