--- a/Languages/default-hr.xml
+++ b/Languages/default-hr.xml
@@ -1649,6 +1649,10 @@
 		<menu name="WebServices.List.Menu">
 			<item id="ID_WEBSERVICES_MUSICBRAINZ" text="_MusicBrainz"/>
 		</menu>
+		<menu name="Path.Menu">
+			<item id="ID_PATH_EXPLORE" text="Istraži"/>
+			<item id="ID_PATH_COPY" text="Kopiraj"/>
+		</menu>
 	</menus>
 	<!-- Documents -->
 	<documents>
@@ -2559,6 +2563,8 @@
 		<tip id="ID_NEXT_PANE" message="Switch to the next window pane" tip="Next Pane"/>
 		<tip id="ID_OPEN_DOWNLOADS_FOLDER" message="Open my folder of completed Downloads"/>
 		<tip id="ID_PREV_PANE" message="Switch back to the previous window pane" tip="Previous Pane"/>
+		<tip id="ID_PATH_COPY" message="Copy this path to clipboard."/>
+		<tip id="ID_PATH_EXPLORE" message="Explore this path."/>
 		<tip id="ID_SCHEDULER_ACTIVATE" message="Activates selected task(s) from the list."/>
 		<tip id="ID_SCHEDULER_ADD" message="Adds a new task to scheduler list."/>
 		<tip id="ID_SCHEDULER_DEACTIVATE" message="Deactivates selected tasks."/>
@@ -2861,6 +2867,7 @@
 		<string id="8336" value="Svi izvori ove datoteke su nestabilni"/>
 		<string id="8337" value="Untrusted"/>
 		<string id="8338" value="Free:"/>
+		<string id="12999" value="Client %s has a prohibited user agent &quot;%s&quot;, banning."/>
 		<string id="13000" value="Are you sure you want to delete the selected security rules? This cannot be undone."/>
 		<string id="13001" value="Files shared over the Internet"/>
 		<string id="16063" value="UPnP port mapping failed after 10 attempts."/>
@@ -3433,6 +3440,10 @@
 		<string id="20265" value="Done"/>
 		<string id="20266" value="Waiting..."/>
 		<string id="20267" value="No Tasks Currently Scheduled"/>
+		<string id="20268" value="Skinute Datoteke Spremi Ovdje"/>
+		<string id="20269" value="Nezavršene Datoteke Spremi Ovdje"/>
+		<string id="20270" value="Ovdje Spremi Torrente"/>
+		<string id="20271" value="Ovdje Spremaj Kolekcije"/>
 	</strings>
 	<!-- Localised Dialog Text, the "cookie" verifies that the dialog matches the skin -->
 	<!-- Don't edit dialogs manualy! Use DialogScan feature instead -->
@@ -3473,7 +3484,7 @@
 			<control caption="Kada pritisnem spusti:"/>
 			<control caption="Normalno|Spusti u Tray"/>
 		</dialog>
-		<dialog name="CLibrarySettingsPage" cookie="BuBuBuBuBuBuStEdmsStStEdmsStBuBuCoBuBuBuCoBuBuBuEdBuBuBu" caption="Sadržaj">
+		<dialog name="CLibrarySettingsPage" cookie="BuBuBuBuBuBuStEdmsStStEdmsStBuBuCoBuBuBuCoBuBuBuCoBuBuBu" caption="Sadržaj">
 			<control caption="_Opcije:"/>
 			<control caption="Zapamti mape"/>
 			<control caption="Prati mape moje kolekcije"/>
@@ -3497,7 +3508,7 @@
 			<control/>
 			<control caption="Dod_aj"/>
 			<control caption="Makni"/>
-			<control caption="Ovdje Spremaj Kolek_cije:"/>
+			<control caption="Ovdje Spremaj Kolekcije"/>
 			<control/>
 			<control/>
 			<control caption="Create ghost files when deleting"/>
@@ -3610,8 +3621,8 @@
 			<control/>
 			<control/>
 		</dialog>
-		<dialog name="CDownloadsSettingsPage" cookie="BuEdBuBuStCoBuStEdmsStEdmsStEdmsBuStCoStCoBuBuEdBu" caption="Razmjena">
-			<control caption="Save Completed Files Here"/>
+		<dialog name="CDownloadsSettingsPage" cookie="BuCoBuBuStCoBuStEdmsStEdmsStEdmsBuStCoStCoBuBuCoBu" caption="Razmjena">
+			<control caption="Skinute Datoteke Spremi Ovdje"/>
 			<control/>
 			<control/>
 			<control caption="Scan every completed file with AntiVirus"/>
@@ -3633,7 +3644,7 @@
 			<control caption="Maximalna Dužina Čekanja:"/>
 			<control/>
 			<control caption="Skidaj i djeli samo sa spojenih mreža"/>
-			<control caption="Store Temporary Incomplete Files Here"/>
+			<control caption="Nezavršene Datoteke Spremi Ovdje"/>
 			<control/>
 			<control/>
 		</dialog>
@@ -3744,7 +3755,7 @@
 			<control caption="Ubaci eDonkey/eMule djelomična skidanja (.part):"/>
 			<control caption="Ubaci..."/>
 		</dialog>
-		<dialog name="CBitTorrentSettingsPage" cookie="BuBuBuEdmsEdmsBuEdmsBuBuEdBuEdBuEdBuBuBuStStStStBu" caption="BitTorrent">
+		<dialog name="CBitTorrentSettingsPage" cookie="BuBuBuEdmsEdmsBuEdmsBuBuCoBuEdBuEdBuBuBuStStStStBu" caption="BitTorrent">
 			<control caption="Always connect to BitTorrent"/>
 			<control caption="Connect to BitTorrent today"/>
 			<control caption="Enable BitTorrent DHT"/>
@@ -3764,7 +3775,7 @@
 			<control/>
 			<control caption="_BitTorrent Network:"/>
 			<control caption="Postavke ski_danja:"/>
-			<control caption="Ovdje _Spremi Torrente::"/>
+			<control caption="Ovdje Spremi Torrente"/>
 			<control caption="Istovremenih Torrenta"/>
 			<control caption="Klijent veze"/>
 			<control caption="%"/>
