--- a/Languages/default-lt.xml
+++ b/Languages/default-lt.xml
@@ -1649,6 +1649,10 @@
 		<menu name="WebServices.List.Menu">
 			<item id="ID_WEBSERVICES_MUSICBRAINZ" text="_MusicBrainz"/>
 		</menu>
+		<menu name="Path.Menu">
+			<item id="ID_PATH_EXPLORE" text="P_eržvelgti"/>
+			<item id="ID_PATH_COPY" text="_Kopijuoti"/>
+		</menu>
 	</menus>
 	<!-- Documents -->
 	<documents>
@@ -2559,6 +2563,8 @@
 		<tip id="ID_NEXT_PANE" message="Switch to the next window pane" tip="Next Pane"/>
 		<tip id="ID_OPEN_DOWNLOADS_FOLDER" message="Open my folder of completed Downloads"/>
 		<tip id="ID_PREV_PANE" message="Switch back to the previous window pane" tip="Previous Pane"/>
+		<tip id="ID_PATH_COPY" message="Copy this path to clipboard."/>
+		<tip id="ID_PATH_EXPLORE" message="Explore this path."/>
 		<tip id="ID_SCHEDULER_ACTIVATE" message="Activates selected task(s) from the list."/>
 		<tip id="ID_SCHEDULER_ADD" message="Adds a new task to scheduler list."/>
 		<tip id="ID_SCHEDULER_DEACTIVATE" message="Deactivates selected tasks."/>
@@ -2861,6 +2867,7 @@
 		<string id="8336" value="Šio failo šaltiniai gali siųsti nestabiliai"/>
 		<string id="8337" value="Patikimas"/>
 		<string id="8338" value="Free:"/>
+		<string id="12999" value="Client %s has a prohibited user agent &quot;%s&quot;, banning."/>
 		<string id="13000" value="Ar tikrai norite ištrinti pasirinktas saugos taisykles? Šio žingsnio negalėsite atšaukti."/>
 		<string id="13001" value="Failai, bendrinami internetu"/>
 		<string id="16063" value="Prievado peradresavimas naudojant UPnP buvo nesėkmingas po 10 bandymų."/>
@@ -3433,6 +3440,10 @@
 		<string id="20265" value="Done"/>
 		<string id="20266" value="Waiting..."/>
 		<string id="20267" value="No Tasks Currently Scheduled"/>
+		<string id="20268" value="Saugoti parsiųstus failus čia"/>
+		<string id="20269" value="Laikyti nebaigtus siųstis failus čia"/>
+		<string id="20270" value="Laikyti torrent failus čia"/>
+		<string id="20271" value="Laikyti rinkinius čia"/>
 	</strings>
 	<!-- Localised Dialog Text, the "cookie" verifies that the dialog matches the skin -->
 	<!-- Don't edit dialogs manualy! Use DialogScan feature instead -->
@@ -3473,7 +3484,7 @@
 			<control caption="Kai paspaudžiu sutraukti:"/>
 			<control caption="Įprastas veiksmas|Patalpinti juostelėn"/>
 		</dialog>
-		<dialog name="CLibrarySettingsPage" cookie="BuBuBuBuBuBuStEdmsStStEdmsStBuBuCoBuBuBuCoBuBuBuEdBuBuBu" caption="Kolekcija">
+		<dialog name="CLibrarySettingsPage" cookie="BuBuBuBuBuBuStEdmsStStEdmsStBuBuCoBuBuBuCoBuBuBuCoBuBuBu" caption="Kolekcija">
 			<control caption="Pa_rinktys:"/>
 			<control caption="Prisiminti aplankų peržiūros būdą"/>
 			<control caption="Stebėti kolekcijos katalogus"/>
@@ -3497,7 +3508,7 @@
 			<control/>
 			<control caption="_Pridėti"/>
 			<control caption="Š_alinti"/>
-			<control caption="_Laikyti rinkinius čia:"/>
+			<control caption="Laikyti rinkinius čia"/>
 			<control/>
 			<control/>
 			<control caption="Kurti šešėlinius failus trinant"/>
@@ -3610,8 +3621,8 @@
 			<control/>
 			<control/>
 		</dialog>
-		<dialog name="CDownloadsSettingsPage" cookie="BuEdBuBuStCoBuStEdmsStEdmsStEdmsBuStCoStCoBuBuEdBu" caption="Atsisiuntimai">
-			<control caption="Save Completed Files Here"/>
+		<dialog name="CDownloadsSettingsPage" cookie="BuCoBuBuStCoBuStEdmsStEdmsStEdmsBuStCoStCoBuBuCoBu" caption="Atsisiuntimai">
+			<control caption="Saugoti parsiųstus failus čia"/>
 			<control/>
 			<control/>
 			<control caption="Scan every completed file with AntiVirus"/>
@@ -3633,7 +3644,7 @@
 			<control caption="Maksimalus eilės dydis:"/>
 			<control/>
 			<control caption="Failų mainus vykdyti tik tinkluose, prie kurių prisijungta."/>
-			<control caption="Store Temporary Incomplete Files Here"/>
+			<control caption="Laikyti nebaigtus siųstis failus čia"/>
 			<control/>
 			<control/>
 		</dialog>
@@ -3744,7 +3755,7 @@
 			<control caption="eDonkey į_rankiai:"/>
 			<control caption="eDonkey serverių sąrašo parsisiuntimas iš interneto:"/>
 		</dialog>
-		<dialog name="CBitTorrentSettingsPage" cookie="BuBuBuEdmsEdmsBuEdmsBuBuEdBuEdBuEdBuBuBuStStStStBu" caption="BitTorrent">
+		<dialog name="CBitTorrentSettingsPage" cookie="BuBuBuEdmsEdmsBuEdmsBuBuCoBuEdBuEdBuBuBuStStStStBu" caption="BitTorrent">
 			<control caption="Always connect to BitTorrent"/>
 			<control caption="Connect to BitTorrent today"/>
 			<control caption="Enable BitTorrent DHT"/>
@@ -3764,7 +3775,7 @@
 			<control/>
 			<control caption="_BitTorrent Network:"/>
 			<control caption="_Atsisiuntimų susijungimai:"/>
-			<control caption="_Laikyti torrent failus čia:"/>
+			<control caption="Laikyti torrent failus čia"/>
 			<control caption="Torrent failų per kartą"/>
 			<control caption="Klientų susijungimų"/>
 			<control caption="%"/>
