--- a/Languages/default-pl.xml
+++ b/Languages/default-pl.xml
@@ -1649,6 +1649,10 @@
 		<menu name="WebServices.List.Menu">
 			<item id="ID_WEBSERVICES_MUSICBRAINZ" text="_MusicBrainz"/>
 		</menu>
+		<menu name="Path.Menu">
+			<item id="ID_PATH_EXPLORE" text="Przeglądaj"/>
+			<item id="ID_PATH_COPY" text="Kopiuj"/>
+		</menu>
 	</menus>
 	<!-- Documents -->
 	<documents>
@@ -2559,6 +2563,8 @@
 		<tip id="ID_NEXT_PANE" message="Switch to the next window pane" tip="Next Pane"/>
 		<tip id="ID_OPEN_DOWNLOADS_FOLDER" message="Open my folder of completed Downloads"/>
 		<tip id="ID_PREV_PANE" message="Switch back to the previous window pane" tip="Previous Pane"/>
+		<tip id="ID_PATH_COPY" message="Copy this path to clipboard."/>
+		<tip id="ID_PATH_EXPLORE" message="Explore this path."/>
 		<tip id="ID_SCHEDULER_ACTIVATE" message="Activates selected task(s) from the list."/>
 		<tip id="ID_SCHEDULER_ADD" message="Adds a new task to scheduler list."/>
 		<tip id="ID_SCHEDULER_DEACTIVATE" message="Deactivates selected tasks."/>
@@ -2861,6 +2867,7 @@
 		<string id="8336" value="Źródła dla tego pliku moga być niestabilne"/>
 		<string id="8337" value="Untrusted, nie zaufany"/>
 		<string id="8338" value="Free:"/>
+		<string id="12999" value="Client %s has a prohibited user agent &quot;%s&quot;, banning."/>
 		<string id="13000" value="Czy jesteś pewny, że chcesz usunąć zaznaczone reguły bezpieczeństwa? To jest nieodwracalne."/>
 		<string id="13001" value="Files shared over the Internet"/>
 		<string id="16063" value="Po 10 próbach mapowanie UPnP portu nie powiodło się."/>
@@ -3433,6 +3440,10 @@
 		<string id="20265" value="Done"/>
 		<string id="20266" value="Waiting..."/>
 		<string id="20267" value="No Tasks Currently Scheduled"/>
+		<string id="20268" value="Zapisuj zakończone pliki tutaj"/>
+		<string id="20269" value="Przechowuj pliki tymczasowe (jeszcze niekompletne) tutaj"/>
+		<string id="20270" value="Przechowuj Torrenty tutaj"/>
+		<string id="20271" value="Przechowuj kolekcje tutaj"/>
 	</strings>
 	<!-- Localised Dialog Text, the "cookie" verifies that the dialog matches the skin -->
 	<!-- Don't edit dialogs manualy! Use DialogScan feature instead -->
@@ -3473,7 +3484,7 @@
 			<control caption="Kiedy kliknę minimalizuj:"/>
 			<control caption="Normalnie|Minimalizuj do zasobnika"/>
 		</dialog>
-		<dialog name="CLibrarySettingsPage" cookie="BuBuBuBuBuBuStEdmsStStEdmsStBuBuCoBuBuBuCoBuBuBuEdBuBuBu" caption="Biblioteka">
+		<dialog name="CLibrarySettingsPage" cookie="BuBuBuBuBuBuStEdmsStStEdmsStBuBuCoBuBuBuCoBuBuBuCoBuBuBu" caption="Biblioteka">
 			<control caption="Opcje:"/>
 			<control caption="Zapamiętaj widok folderów"/>
 			<control caption="Pilnuj folderów biblioteki (zasobów)"/>
@@ -3497,7 +3508,7 @@
 			<control/>
 			<control caption="Dodaj"/>
 			<control caption="Usuń"/>
-			<control caption="Przechowuj kolekcje tutaj:"/>
+			<control caption="Przechowuj kolekcje tutaj"/>
 			<control/>
 			<control/>
 			<control caption="Create ghost files when deleting"/>
@@ -3610,8 +3621,8 @@
 			<control/>
 			<control/>
 		</dialog>
-		<dialog name="CDownloadsSettingsPage" cookie="BuEdBuBuStCoBuStEdmsStEdmsStEdmsBuStCoStCoBuBuEdBu" caption="Pobierania">
-			<control caption="Save Completed Files Here"/>
+		<dialog name="CDownloadsSettingsPage" cookie="BuCoBuBuStCoBuStEdmsStEdmsStEdmsBuStCoStCoBuBuCoBu" caption="Pobierania">
+			<control caption="Zapisuj zakończone pliki tutaj"/>
 			<control/>
 			<control/>
 			<control caption="Scan every completed file with AntiVirus"/>
@@ -3633,7 +3644,7 @@
 			<control caption="Maks. długość kolejki do pobr.:"/>
 			<control/>
 			<control caption="Pobieraj i wysyłaj tylko do sieci z którymi jesteś połączony."/>
-			<control caption="Store Temporary Incomplete Files Here"/>
+			<control caption="Przechowuj pliki tymczasowe (jeszcze niekompletne) tutaj"/>
 			<control/>
 			<control/>
 		</dialog>
@@ -3744,7 +3755,7 @@
 			<control caption="Narzędzia eDonkey:"/>
 			<control caption="Pobierz listę serwerów eDonkey z sieci:"/>
 		</dialog>
-		<dialog name="CBitTorrentSettingsPage" cookie="BuBuBuEdmsEdmsBuEdmsBuBuEdBuEdBuEdBuBuBuStStStStBu" caption="BitTorrent">
+		<dialog name="CBitTorrentSettingsPage" cookie="BuBuBuEdmsEdmsBuEdmsBuBuCoBuEdBuEdBuBuBuStStStStBu" caption="BitTorrent">
 			<control caption="Always connect to BitTorrent"/>
 			<control caption="Connect to BitTorrent today"/>
 			<control caption="Enable BitTorrent DHT"/>
@@ -3764,7 +3775,7 @@
 			<control/>
 			<control caption="_BitTorrent Network:"/>
 			<control caption="Połączenia pobierające:"/>
-			<control caption="Przechowuj Torrenty tutaj:"/>
+			<control caption="Przechowuj Torrenty tutaj"/>
 			<control caption="Torrentów równocześnie"/>
 			<control caption="Połączeń z innymi klientami"/>
 			<control caption="%"/>
