--- a/Languages/default-pt-br.xml
+++ b/Languages/default-pt-br.xml
@@ -1649,6 +1649,10 @@
 		<menu name="WebServices.List.Menu">
 			<item id="ID_WEBSERVICES_MUSICBRAINZ" text="_MusicBrainz"/>
 		</menu>
+		<menu name="Path.Menu">
+			<item id="ID_PATH_EXPLORE" text="_Explorar"/>
+			<item id="ID_PATH_COPY" text="_Copiar"/>
+		</menu>
 	</menus>
 	<!-- Documents -->
 	<documents>
@@ -2558,6 +2562,8 @@ t		Alternativamente, você pode manualmente iniciar este download com o comando 
 		<tip id="ID_NEXT_PANE" message="Trocar para o próximo painel da janela" tip="Próximo Painel"/>
 		<tip id="ID_OPEN_DOWNLOADS_FOLDER" message="Abrir minha pasta de Downloads completados"/>
 		<tip id="ID_PREV_PANE" message="Trocar de volta ao painel da janela anterior" tip="Painel Anterior"/>
+		<tip id="ID_PATH_COPY" message="Copy this path to clipboard."/>
+		<tip id="ID_PATH_EXPLORE" message="Explore this path."/>
 		<tip id="ID_SCHEDULER_ACTIVATE" message="Ativa a(s) tarefa(s) selecionada(s) da lista."/>
 		<tip id="ID_SCHEDULER_ADD" message="Adiciona uma nova tarefa a lista da agenda."/>
 		<tip id="ID_SCHEDULER_DEACTIVATE" message="Desativa as tarefas selecionadas."/>
@@ -2860,6 +2866,7 @@ t		Alternativamente, você pode manualmente iniciar este download com o comando 
 		<string id="8336" value="As fontes para este arquivo podem ser instáveis"/>
 		<string id="8337" value="Não confiável"/>
 		<string id="8338" value="Free:"/>
+		<string id="12999" value="Client %s has a prohibited user agent &quot;%s&quot;, banning."/>
 		<string id="13000" value="Você tem certeza de que você quer apagar as regras de segurança selecionadas?  Isto não pode ser desfeito."/>
 		<string id="13001" value="Arquivos compartilhados pela Internet"/>
 		<string id="16063" value="O mapamento de portas UPnP falhou após 10 tentativas."/>
@@ -3436,6 +3443,10 @@ pasta dos arquivos baixados a sua biblioteca agora?"/>
 		<string id="20265" value="Feito"/>
 		<string id="20266" value="Esperando..."/>
 		<string id="20267" value="Sem Tarefas Agendadas Atualmente"/>
+		<string id="20268" value="Salvar Arquivos Completados Aqui"/>
+		<string id="20269" value="Armazenar Arquivos Incompletos Temporários Aqui"/>
+		<string id="20270" value="Armazenar Torrents Aqui"/>
+		<string id="20271" value="Armazenar as Coleções Aqui"/>
 	</strings>
 	<!-- Localised Dialog Text, the "cookie" verifies that the dialog matches the skin -->
 	<!-- Don't edit dialogs manualy! Use DialogScan feature instead -->
@@ -3476,7 +3487,7 @@ pasta dos arquivos baixados a sua biblioteca agora?"/>
 			<control caption="Quando clicar em minimizar:"/>
 			<control caption="Normal|Minimizar pro Tray"/>
 		</dialog>
-		<dialog name="CLibrarySettingsPage" cookie="BuBuBuBuBuBuStEdmsStStEdmsStBuBuCoBuBuBuCoBuBuBuEdBuBuBu" caption="Biblioteca">
+		<dialog name="CLibrarySettingsPage" cookie="BuBuBuBuBuBuStEdmsStStEdmsStBuBuCoBuBuBuCoBuBuBuCoBuBuBu" caption="Biblioteca">
 			<control caption="_Opções:"/>
 			<control caption="Lembrar a exibição das pastas"/>
 			<control caption="Observar as pastas da biblioteca"/>
@@ -3500,7 +3511,7 @@ pasta dos arquivos baixados a sua biblioteca agora?"/>
 			<control/>
 			<control caption="_Adicionar"/>
 			<control caption="_Remover"/>
-			<control caption="Armazenar as _Coleções Aqui:"/>
+			<control caption="Armazenar as Coleções Aqui"/>
 			<control/>
 			<control/>
 			<control caption="Criar arquivos ghost quando apagar"/>
@@ -3613,8 +3624,8 @@ pasta dos arquivos baixados a sua biblioteca agora?"/>
 			<control/>
 			<control/>
 		</dialog>
-		<dialog name="CDownloadsSettingsPage" cookie="BuEdBuBuStCoBuStEdmsStEdmsStEdmsBuStCoStCoBuBuEdBu" caption="Downloads">
-			<control caption="Save Completed Files Here"/>
+		<dialog name="CDownloadsSettingsPage" cookie="BuCoBuBuStCoBuStEdmsStEdmsStEdmsBuStCoStCoBuBuCoBu" caption="Downloads">
+			<control caption="Salvar Arquivos Completados Aqui"/>
 			<control/>
 			<control/>
 			<control caption="Scan every completed file with AntiVirus"/>
@@ -3636,7 +3647,7 @@ pasta dos arquivos baixados a sua biblioteca agora?"/>
 			<control caption="Tamanho Máximo da Fila:"/>
 			<control/>
 			<control caption="Só baixar e enviar para redes nas quais está conectado."/>
-			<control caption="Store Temporary Incomplete Files Here"/>
+			<control caption="Armazenar Arquivos Incompletos Temporários Aqui"/>
 			<control/>
 			<control/>
 		</dialog>
@@ -3747,7 +3758,7 @@ pasta dos arquivos baixados a sua biblioteca agora?"/>
 			<control caption="Ferramentas do eDonkey"/>
 			<control caption="Baixar lista de servidores eDonkey da rede:"/>
 		</dialog>
-		<dialog name="CBitTorrentSettingsPage" cookie="BuBuBuEdmsEdmsBuEdmsBuBuEdBuEdBuEdBuBuBuStStStStBu" caption="BitTorrent">
+		<dialog name="CBitTorrentSettingsPage" cookie="BuBuBuEdmsEdmsBuEdmsBuBuCoBuEdBuEdBuBuBuStStStStBu" caption="BitTorrent">
 			<control caption="Always connect to BitTorrent"/>
 			<control caption="Connect to BitTorrent today"/>
 			<control caption="Enable BitTorrent DHT"/>
@@ -3767,7 +3778,7 @@ pasta dos arquivos baixados a sua biblioteca agora?"/>
 			<control/>
 			<control caption="_BitTorrent Network:"/>
 			<control caption="_Conexões de Download:"/>
-			<control caption="_Armazenar Torrents Aqui:"/>
+			<control caption="Armazenar Torrents Aqui"/>
 			<control caption="Torrents de uma vez"/>
 			<control caption="Conexões com clientes"/>
 			<control caption="%"/>
