--- a/Languages/default-ru.xml
+++ b/Languages/default-ru.xml
@@ -1649,6 +1649,10 @@
 		<menu name="WebServices.List.Menu">
 			<item id="ID_WEBSERVICES_MUSICBRAINZ" text="_MusicBrainz"/>
 		</menu>
+		<menu name="Path.Menu">
+			<item id="ID_PATH_EXPLORE" text="_Проводник"/>
+			<item id="ID_PATH_COPY" text="_Копировать"/>
+		</menu>
 	</menus>
 	<!-- Documents -->
 	<documents>
@@ -2555,6 +2559,8 @@
 		<tip id="ID_NEXT_PANE" message="Переключиться в другое окно" tip="Следующее окно"/>
 		<tip id="ID_OPEN_DOWNLOADS_FOLDER" message="Открыть папку с завершёнными загрузками"/>
 		<tip id="ID_PREV_PANE" message="Перейти к предыдущему окну" tip="Предыдущее окно"/>
+		<tip id="ID_PATH_COPY" message="Скопировать этот путь в буфер обмена."/>
+		<tip id="ID_PATH_EXPLORE" message="Открыть этот путь."/>
 		<tip id="ID_SCHEDULER_ACTIVATE" message="Включить выбранную задачу."/>
 		<tip id="ID_SCHEDULER_ADD" message="Добавить новую задачу в Планировщике."/>
 		<tip id="ID_SCHEDULER_DEACTIVATE" message="Выключить выбранные задачи."/>
@@ -2857,6 +2863,7 @@
 		<string id="8336" value="Источники этого файла могут раздавать нестабильно"/>
 		<string id="8337" value="Недоверяемый"/>
 		<string id="8338" value="Свободно:"/>
+		<string id="12999" value="Компьютер %s забанен за запрещённый клиент &quot;%s&quot;."/>
 		<string id="13000" value="Уверены, что хотите удалить выбранные правила безопасности? Действие будет необратимое."/>
 		<string id="13001" value="Файлы, открытые для общего доступа"/>
 		<string id="16063" value="После 10 попыток переадресация порта при помощи UPnP, была неуспешна."/>
@@ -3429,6 +3436,10 @@
 		<string id="20265" value="Готово"/>
 		<string id="20266" value="Ждите..."/>
 		<string id="20267" value="Нет задач для Планировщика"/>
+		<string id="20268" value="Загруженные файлы лежат здесь"/>
+		<string id="20269" value="Незаконченные файлы лежат здесь"/>
+		<string id="20270" value="Держать торренты в папке"/>
+		<string id="20271" value="Держать коллекции в папке"/>
 	</strings>
 	<!-- Localised Dialog Text, the "cookie" verifies that the dialog matches the skin -->
 	<!-- Don't edit dialogs manualy! Use DialogScan feature instead -->
@@ -3469,7 +3480,7 @@
 			<control caption="Когда щелкаю свернуть:"/>
 			<control caption="Обычное действие|Отправить в трей"/>
 		</dialog>
-		<dialog name="CLibrarySettingsPage" cookie="BuBuBuBuBuBuStEdmsStStEdmsStBuBuCoBuBuBuCoBuBuBuEdBuBuBu" caption="Хранилище">
+		<dialog name="CLibrarySettingsPage" cookie="BuBuBuBuBuBuStEdmsStStEdmsStBuBuCoBuBuBuCoBuBuBuCoBuBuBu" caption="Хранилище">
 			<control caption="_Опции:"/>
 			<control caption="Запоминать вид папок"/>
 			<control caption="Следить за хранилищем"/>
@@ -3493,7 +3504,7 @@
 			<control/>
 			<control caption="_Внести"/>
 			<control caption="_Удалить"/>
-			<control caption="Держать _коллекции в папке:"/>
+			<control caption="Держать коллекции в папке"/>
 			<control/>
 			<control/>
 			<control caption="Теневые файлы при стирании"/>
@@ -3606,7 +3617,7 @@
 			<control/>
 			<control/>
 		</dialog>
-		<dialog name="CDownloadsSettingsPage" cookie="BuEdBuBuStCoBuStEdmsStEdmsStEdmsBuStCoStCoBuBuEdBu" caption="Загрузки">
+		<dialog name="CDownloadsSettingsPage" cookie="BuCoBuBuStCoBuStEdmsStEdmsStEdmsBuStCoStCoBuBuCoBu" caption="Загрузки">
 			<control caption="Загруженные файлы лежат здесь"/>
 			<control/>
 			<control/>
@@ -3740,7 +3751,7 @@
 			<control caption="eDonkey _утилиты:"/>
 			<control caption="Загрузить список серверов из интернета:"/>
 		</dialog>
-		<dialog name="CBitTorrentSettingsPage" cookie="BuBuBuEdmsEdmsBuEdmsBuBuEdBuEdBuEdBuBuBuStStStStBu" caption="BitTorrent">
+		<dialog name="CBitTorrentSettingsPage" cookie="BuBuBuEdmsEdmsBuEdmsBuBuCoBuEdBuEdBuBuBuStStStStBu" caption="BitTorrent">
 			<control caption="Всегда соединяться с BitTorrent"/>
 			<control caption="Соединиться с BitTorrent сегодня"/>
 			<control caption="Использовать BitTorrent DHT"/>
@@ -3760,7 +3771,7 @@
 			<control/>
 			<control caption="_Сеть BitTorrent:"/>
 			<control caption="_Соединений для загрузки:"/>
-			<control caption="_Держать торренты в папке:"/>
+			<control caption="Держать торренты в папке"/>
 			<control caption="_Торрентов одновременно"/>
 			<control caption="Клиентских соединений"/>
 			<control caption="%"/>
