--- a/Languages/default-sv.xml
+++ b/Languages/default-sv.xml
@@ -1649,6 +1649,10 @@
 		<menu name="WebServices.List.Menu">
 			<item id="ID_WEBSERVICES_MUSICBRAINZ" text="_MusicBrainz"/>
 		</menu>
+		<menu name="Path.Menu">
+			<item id="ID_PATH_EXPLORE" text="_Utforska"/>
+			<item id="ID_PATH_COPY" text="_Kopiera"/>
+		</menu>
 	</menus>
 	<!-- Documents -->
 	<documents>
@@ -2558,6 +2562,8 @@
 		<tip id="ID_NEXT_PANE" message="Switch to the next window pane" tip="Next Pane"/>
 		<tip id="ID_OPEN_DOWNLOADS_FOLDER" message="Open my folder of completed Downloads"/>
 		<tip id="ID_PREV_PANE" message="Switch back to the previous window pane" tip="Previous Pane"/>
+		<tip id="ID_PATH_COPY" message="Copy this path to clipboard."/>
+		<tip id="ID_PATH_EXPLORE" message="Explore this path."/>
 		<tip id="ID_SCHEDULER_ACTIVATE" message="Activates selected task(s) from the list."/>
 		<tip id="ID_SCHEDULER_ADD" message="Adds a new task to scheduler list."/>
 		<tip id="ID_SCHEDULER_DEACTIVATE" message="Deactivates selected tasks."/>
@@ -2860,6 +2866,7 @@
 		<string id="8336" value="Källor för den här filen är instabila"/>
 		<string id="8337" value="Opålitlig"/>
 		<string id="8338" value="Free:"/>
+		<string id="12999" value="Client %s has a prohibited user agent &quot;%s&quot;, banning."/>
 		<string id="13000" value="Är du säker p å att du vill radera de valda säkerhetsreglerna? Detta kan inte ångras."/>
 		<string id="13001" value="Filer delade över Internet"/>
 		<string id="16063" value="UPnP portmapping misslyckades efter 10 försök."/>
@@ -3432,6 +3439,10 @@
 		<string id="20265" value="Done"/>
 		<string id="20266" value="Waiting..."/>
 		<string id="20267" value="No Tasks Currently Scheduled"/>
+		<string id="20268" value="Spara färdiga nedladdningar här"/>
+		<string id="20269" value="Spara tillfälliga ofullständiga nedladdningar här"/>
+		<string id="20270" value="Lagra torrents här"/>
+		<string id="20271" value="Lagra samlingar här"/>
 	</strings>
 	<!-- Localised Dialog Text, the "cookie" verifies that the dialog matches the skin -->
 	<!-- Don't edit dialogs manualy! Use DialogScan feature instead -->
@@ -3472,7 +3483,7 @@
 			<control caption="När jag klickar minimera."/>
 			<control caption="Normal|Minimera till aktivitetsfltet"/>
 		</dialog>
-		<dialog name="CLibrarySettingsPage" cookie="BuBuBuBuBuBuStEdmsStStEdmsStBuBuCoBuBuBuCoBuBuBuEdBuBuBu" caption="Bibliotek">
+		<dialog name="CLibrarySettingsPage" cookie="BuBuBuBuBuBuStEdmsStStEdmsStBuBuCoBuBuBuCoBuBuBuCoBuBuBu" caption="Bibliotek">
 			<control caption="_Alternativ:"/>
 			<control caption="Kom ihåg mappvyer"/>
 			<control caption="Bevaka biblioteksmappar"/>
@@ -3496,7 +3507,7 @@
 			<control/>
 			<control caption="Lägg till"/>
 			<control caption="_Radera"/>
-			<control caption="Lagra _samlingar här:"/>
+			<control caption="Lagra samlingar här"/>
 			<control/>
 			<control/>
 			<control caption="Skapa skuggfil vid radering"/>
@@ -3609,8 +3620,8 @@
 			<control/>
 			<control/>
 		</dialog>
-		<dialog name="CDownloadsSettingsPage" cookie="BuEdBuBuStCoBuStEdmsStEdmsStEdmsBuStCoStCoBuBuEdBu" caption="Nedladdningar">
-			<control caption="Save Completed Files Here"/>
+		<dialog name="CDownloadsSettingsPage" cookie="BuCoBuBuStCoBuStEdmsStEdmsStEdmsBuStCoStCoBuBuCoBu" caption="Nedladdningar">
+			<control caption="Spara färdiga nedladdningar här"/>
 			<control/>
 			<control/>
 			<control caption="Scan every completed file with AntiVirus"/>
@@ -3632,7 +3643,7 @@
 			<control caption="Största köstorlek:"/>
 			<control/>
 			<control caption="Tillåt endast överföringar till och från nätverk som är /nanslutna för närvarande."/>
-			<control caption="Store Temporary Incomplete Files Here"/>
+			<control caption="Spara tillfälliga ofullständiga nedladdningar här"/>
 			<control/>
 			<control/>
 		</dialog>
@@ -3743,7 +3754,7 @@
 			<control caption="eDonkey-_verktyg:"/>
 			<control caption="Ladda ned serverlista för eDonkey från webben:"/>
 		</dialog>
-		<dialog name="CBitTorrentSettingsPage" cookie="BuBuBuEdmsEdmsBuEdmsBuBuEdBuEdBuEdBuBuBuStStStStBu" caption="BitTorrent">
+		<dialog name="CBitTorrentSettingsPage" cookie="BuBuBuEdmsEdmsBuEdmsBuBuCoBuEdBuEdBuBuBuStStStStBu" caption="BitTorrent">
 			<control caption="Always connect to BitTorrent"/>
 			<control caption="Connect to BitTorrent today"/>
 			<control caption="Enable BitTorrent DHT"/>
@@ -3763,7 +3774,7 @@
 			<control/>
 			<control caption="_BitTorrent Network:"/>
 			<control caption="_Nedladdningsanslutning:"/>
-			<control caption="_Lagra torrents här:"/>
+			<control caption="Lagra torrents här"/>
 			<control caption="Torrents direkt"/>
 			<control caption="Klientanslutningar"/>
 			<control caption="%"/>
